snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.module.sha512
dc2b5cfde8c3933b1bb253eae69ba1499eb2d6d0be9a6089ef7c38e9c0ac4746fd50313841013b87c26637e40c1be81b69609d2562989f5be7eabcae2808fe31